--- a/Mutual_Fund_Analytics.ipynb
+++ b/Mutual_Fund_Analytics.ipynb
@@ -1901,71 +1901,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def beta_calc(start_date, end_date,type_of_mf):\n",
-    "    \n",
-    "    index_start_value = (\n",
-    "        result_df.loc[result_df['date']== start_date,'index_nrml'].values[0]\n",
-    "    )\n",
-    "    index_end_value = (\n",
-    "        result_df.loc[result_df['date']== end_date,'index_nrml'].values[0]\n",
-    "    )\n",
-    "    index_change=index_start_value - index_end_value\n",
-    "    \n",
-    "    if type_of_mf=='equity':\n",
-    "        mf_start_value=result_df.loc[result_df['date']== start_date,'avg_equity'].values[0]\n",
-    "        mf_end_value=result_df.loc[result_df['date']== end_date,'avg_equity'].values[0]\n",
-    "        result=(mf_start_value-mf_end_value)/index_change\n",
-    "    elif type_of_mf=='debt':\n",
-    "        mf_start_value=result_df.loc[result_df['date']== start_date,'avg_debt'].values[0]\n",
-    "        mf_end_value=result_df.loc[result_df['date']== end_date,'avg_debt'].values[0]\n",
-    "        result=(mf_start_value-mf_end_value)/index_change\n",
-    "    elif type_of_mf=='hybrid':\n",
-    "        mf_start_value=result_df.loc[result_df['date']== start_date,'avg_hybrid'].values[0]\n",
-    "        mf_end_value=result_df.loc[result_df['date']== end_date,'avg_hybrid'].values[0]\n",
-    "        result=(mf_start_value-mf_end_value)/index_change\n",
+    "def beta_calc(start_date, end_date, type_of_mf):\n",
+    "    index_start_value = result_df.loc[\n",
+    "        result_df[\"date\"] == start_date, \"index_nrml\"\n",
+    "    ].values[0]\n",
+    "    index_end_value = result_df.loc[result_df[\"date\"] == end_date, \"index_nrml\"].values[\n",
+    "        0\n",
+    "    ]\n",
+    "    index_change = index_start_value - index_end_value\n",
+    "\n",
+    "    if type_of_mf == \"equity\":\n",
+    "        mf_start_value = result_df.loc[\n",
+    "            result_df[\"date\"] == start_date, \"avg_equity\"\n",
+    "        ].values[0]\n",
+    "        mf_end_value = result_df.loc[\n",
+    "            result_df[\"date\"] == end_date, \"avg_equity\"\n",
+    "        ].values[0]\n",
+    "        result = (mf_start_value - mf_end_value) / index_change\n",
+    "\n",
+    "    elif type_of_mf == \"debt\":\n",
+    "        mf_start_value = result_df.loc[\n",
+    "            result_df[\"date\"] == start_date, \"avg_debt\"\n",
+    "        ].values[0]\n",
+    "        mf_end_value = result_df.loc[result_df[\"date\"] == end_date, \"avg_debt\"].values[\n",
+    "            0\n",
+    "        ]\n",
+    "        result = (mf_start_value - mf_end_value) / index_change\n",
+    "\n",
+    "    elif type_of_mf == \"hybrid\":\n",
+    "        mf_start_value = result_df.loc[\n",
+    "            result_df[\"date\"] == start_date, \"avg_hybrid\"\n",
+    "        ].values[0]\n",
+    "        mf_end_value = result_df.loc[\n",
+    "            result_df[\"date\"] == end_date, \"avg_hybrid\"\n",
+    "        ].values[0]\n",
+    "        result = (mf_start_value - mf_end_value) / index_change\n",
     "    else:\n",
-    "        result=\"Wrong mf Type\"\n",
-    "        \n",
-    "    \n",
-    "    return round(result,2)\n",
+    "        result = \"Wrong mf Type\"\n",
+    "\n",
+    "    return round(result, 2)\n",
     "\n",
     "\n",
-    "def alpha_calc(start_date, end_date,type_of_mf):\n",
-    "    \n",
-    "    index_start_value = (\n",
-    "        result_df.loc[result_df['date']== start_date,'index_nrml'].values[0]\n",
-    "    )\n",
-    "    index_end_value = (\n",
-    "        result_df.loc[result_df['date']== end_date,'index_nrml'].values[0]\n",
-    "    )\n",
-    "    index_change=index_end_value - index_start_value \n",
-    "    \n",
-    "    if type_of_mf=='equity':\n",
-    "        mf_start_value=result_df.loc[result_df['date']== start_date,'avg_equity'].values[0]\n",
-    "        mf_end_value=result_df.loc[result_df['date']== end_date,'avg_equity'].values[0]\n",
-    "        result=(mf_end_value - mf_start_value)/index_change\n",
-    "    elif type_of_mf=='debt':\n",
-    "        mf_start_value=result_df.loc[result_df['date']== start_date,'avg_debt'].values[0]\n",
-    "        mf_end_value=result_df.loc[result_df['date']== end_date,'avg_debt'].values[0]\n",
-    "        result=(mf_end_value - mf_start_value)/index_change\n",
-    "    elif type_of_mf=='hybrid':\n",
-    "        mf_start_value=result_df.loc[result_df['date']== start_date,'avg_hybrid'].values[0]\n",
-    "        mf_end_value=result_df.loc[result_df['date']== end_date,'avg_hybrid'].values[0]\n",
-    "        result=(mf_end_value - mf_start_value)/index_change\n",
+    "def alpha_calc(start_date, end_date, type_of_mf):\n",
+    "    index_start_value = result_df.loc[\n",
+    "        result_df[\"date\"] == start_date, \"index_nrml\"\n",
+    "    ].values[0]\n",
+    "    index_end_value = result_df.loc[result_df[\"date\"] == end_date, \"index_nrml\"].values[\n",
+    "        0\n",
+    "    ]\n",
+    "    index_change = index_end_value - index_start_value\n",
+    "\n",
+    "    if type_of_mf == \"equity\":\n",
+    "        mf_start_value = result_df.loc[\n",
+    "            result_df[\"date\"] == start_date, \"avg_equity\"\n",
+    "        ].values[0]\n",
+    "        mf_end_value = result_df.loc[\n",
+    "            result_df[\"date\"] == end_date, \"avg_equity\"\n",
+    "        ].values[0]\n",
+    "        result = (mf_end_value - mf_start_value) / index_change\n",
+    "\n",
+    "    elif type_of_mf == \"debt\":\n",
+    "        mf_start_value = result_df.loc[\n",
+    "            result_df[\"date\"] == start_date, \"avg_debt\"\n",
+    "        ].values[0]\n",
+    "        mf_end_value = result_df.loc[result_df[\"date\"] == end_date, \"avg_debt\"].values[\n",
+    "            0\n",
+    "        ]\n",
+    "        result = (mf_end_value - mf_start_value) / index_change\n",
+    "\n",
+    "    elif type_of_mf == \"hybrid\":\n",
+    "        mf_start_value = result_df.loc[\n",
+    "            result_df[\"date\"] == start_date, \"avg_hybrid\"\n",
+    "        ].values[0]\n",
+    "        mf_end_value = result_df.loc[\n",
+    "            result_df[\"date\"] == end_date, \"avg_hybrid\"\n",
+    "        ].values[0]\n",
+    "        result = (mf_end_value - mf_start_value) / index_change\n",
     "    else:\n",
-    "        result=\"Wrong mf Type\"\n",
-    "        \n",
-    "    \n",
-    "    return round(result,2)"
+    "        result = \"Wrong mf Type\"\n",
+    "\n",
+    "    return round(result, 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1977,13 +2001,13 @@
     }
    ],
    "source": [
-    "result=alpha_calc('2020-03-23','2021-01-14','hybrid')\n",
+    "result = alpha_calc(\"2020-03-23\", \"2021-01-14\", \"hybrid\")\n",
     "print(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
