--- a/Mutual_Fund_Analytics.ipynb
+++ b/Mutual_Fund_Analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        " [1228 rows x 2 columns]}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "[1229 rows x 2 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
        " [1228 rows x 2 columns]}"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
        "[1229 rows x 4 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +866,7 @@
        "[1229 rows x 4 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1056,7 +1056,7 @@
        "[1229 rows x 5 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1255,7 +1255,7 @@
        "[1234 rows x 7 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1382,7 +1382,7 @@
        "[1234 rows x 2 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1404,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1522,7 @@
        "[1234 rows x 3 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1533,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1551,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -1565,7 +1565,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1576,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -1718,7 +1718,7 @@
        "[1205 rows x 5 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1731,7 +1731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -1757,7 +1757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1806,7 @@
        "1204 2023-08-28      194.57     44.29        85.9       65.28"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1818,7 +1818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1829,7 +1829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -1847,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -1865,7 +1865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -1883,7 +1883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -1901,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1989,25 +1989,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.76\n"
+      "equity: 0.93\n",
+      "debt: 0.04\n",
+      "hybrid: 0.69\n"
      ]
     }
    ],
    "source": [
-    "result = alpha_calc(\"2020-03-23\", \"2021-01-14\", \"hybrid\")\n",
-    "print(result)"
+    "result = beta_calc(\"2020-02-20\", \"2020-03-23\", \"equity\")\n",
+    "print(f\"equity: {result}\")\n",
+    "\n",
+    "result = beta_calc(\"2020-02-20\", \"2020-03-23\", \"debt\")\n",
+    "print(f\"debt: {result}\")\n",
+    "\n",
+    "result = beta_calc(\"2020-02-20\", \"2020-03-23\", \"hybrid\")\n",
+    "print(f\"hybrid: {result}\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "equity: 1.54\n",
+      "debt: 0.02\n",
+      "hybrid: 0.55\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = beta_calc(\"2022-04-04\", \"2022-06-16\", \"equity\")\n",
+    "print(f\"equity: {result}\")\n",
+    "\n",
+    "result = beta_calc(\"2022-04-04\", \"2022-06-16\", \"debt\")\n",
+    "print(f\"debt: {result}\")\n",
+    "\n",
+    "result = beta_calc(\"2022-04-04\", \"2022-06-16\", \"hybrid\")\n",
+    "print(f\"hybrid: {result}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
