--- a/Mutual_Fund_Analytics.ipynb
+++ b/Mutual_Fund_Analytics.ipynb
@@ -2098,6 +2098,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.24\n",
+      "0.03\n",
+      "0.62\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg_beta_equity = (0.93 + 1.54) / 2\n",
+    "avg_beta_debt = (0.04 + 0.02) / 2\n",
+    "avg_beta_hybrid = (0.69 + 0.55) / 2\n",
+    "\n",
+    "print(round(avg_beta_equity, 2))\n",
+    "print(round(avg_beta_debt, 2))\n",
+    "print(round(avg_beta_hybrid, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 62,
    "metadata": {},
    "outputs": [
