--- a/Mutual_Fund_Analytics.ipynb
+++ b/Mutual_Fund_Analytics.ipynb
@@ -1,8 +1,69 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I have considered Top 3 funds in each category Equity,Debt and Hybrid as per moneycontrol.com \n",
+    "and extracted the data for last 5 years using the mftool library (https://github.com/NayakwadiS/mftool),\n",
+    "mftool provides easy access to historical daily NAV, the information can be called using the \n",
+    "inbuilt method mf.history() and scheme codes for the considered mutual funds can be found in ./data_in/codes.json"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mftool import Mftool\n",
+    "from functools import reduce\n",
+    "\n",
+    "mf = Mftool()\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Storing scheme codes and respective scheme names in a dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "equity = {\n",
+    "    \"0P00012ALS\": \"Motilal Oswal Midcap 30 Direct Growth\",\n",
+    "    \"0P0000XW4J\": \"Quant Small Cap Fund Growth Option Direct Plan\",\n",
+    "    \"0P0000XW51\": \"Quant Tax Plan Growth Option Direct Plan\",\n",
+    "}\n",
+    "debt = {\n",
+    "    \"0P0000XUXV\": \"ICICI Prudential Gilt Fund Direct Plan Growth\",\n",
+    "    \"0P0000K1C8\": \"PGIM India Gilt Fund Growth\",\n",
+    "    \"0P0000XVBF\": \"PGIM India Dynamic Bond Fund Direct Plan Growth Option\",\n",
+    "}\n",
+    "hybrid = {\n",
+    "    \"0P00014MH9\": \"Kotak Equity Hybrid Fund - Direct Plan - Growth\",\n",
+    "    \"0P0000XW46\": \"Edelweiss Aggressive Hybrid -Direct Plan-Growth Option\",\n",
+    "    \"0P0000XZRU\": \"Kotak Debt Hybrid Direct Growth\",\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Storing recieved data frames in a list and then creating a dictionary where the scheme code corresponds to the historical data of that scheme"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -22,29 +83,6 @@
     }
    ],
    "source": [
-    "from mftool import Mftool\n",
-    "from functools import reduce\n",
-    "\n",
-    "mf = Mftool()\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "\n",
-    "equity = {\n",
-    "    \"0P00012ALS\": \"Motilal Oswal Midcap 30 Direct Growth\",\n",
-    "    \"0P0000XW4J\": \"Quant Small Cap Fund Growth Option Direct Plan\",\n",
-    "    \"0P0000XW51\": \"Quant Tax Plan Growth Option Direct Plan\",\n",
-    "}\n",
-    "debt = {\n",
-    "    \"0P0000XUXV\": \"ICICI Prudential Gilt Fund Direct Plan Growth\",\n",
-    "    \"0P0000K1C8\": \"PGIM India Gilt Fund Growth\",\n",
-    "    \"0P0000XVBF\": \"PGIM India Dynamic Bond Fund Direct Plan Growth Option\",\n",
-    "}\n",
-    "hybrid = {\n",
-    "    \"0P00014MH9\": \"Kotak Equity Hybrid Fund - Direct Plan - Growth\",\n",
-    "    \"0P0000XW46\": \"Edelweiss Aggressive Hybrid -Direct Plan-Growth Option\",\n",
-    "    \"0P0000XZRU\": \"Kotak Debt Hybrid Direct Growth\",\n",
-    "}\n",
     "temp_list1 = []\n",
     "temp_list2 = []\n",
     "temp_list3 = []\n",
@@ -68,8 +106,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is how the dictionary will look , equity_dfs as an example : "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +167,7 @@
        " [1228 rows x 2 columns]}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,8 +177,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now lets have a look at the data frame recieved for one of the schemes :"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +297,7 @@
        "[1229 rows x 2 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,8 +307,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I notice that the data frame has date as the index, which is not ideal for our use case, also we have a column for per day change which we do not require , thus we will reset the index and obtain a date column, also drop the daychange column"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +526,7 @@
        " [1228 rows x 2 columns]}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +722,7 @@
        "[1229 rows x 4 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +925,7 @@
        "[1229 rows x 4 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -913,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1081,7 +1140,7 @@
        "[1229 rows x 5 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1092,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1339,7 @@
        "[1234 rows x 7 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1291,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1301,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1407,7 +1466,7 @@
        "[1234 rows x 2 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1418,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1429,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1547,7 +1606,7 @@
        "[1234 rows x 3 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1558,7 +1617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1576,7 +1635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1590,7 +1649,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1601,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1743,7 +1802,7 @@
        "[1205 rows x 5 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1756,7 +1815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1783,7 +1842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1832,7 +1891,7 @@
        "1204 2023-08-28      194.57     44.29        85.9       65.28"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1844,7 +1903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1875,7 +1934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1886,7 +1945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1904,7 +1963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1922,7 +1981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1940,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1958,7 +2017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2046,7 +2105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -2072,7 +2131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -2098,7 +2157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -2123,7 +2182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -2149,7 +2208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
