--- a/Mutual_Fund_Analytics.ipynb
+++ b/Mutual_Fund_Analytics.ipynb
@@ -310,7 +310,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I notice that the data frame has date as the index, which is not ideal for our use case, also we have a column for per day change which we do not require , thus we will reset the index and obtain a date column, also drop the daychange column"
+    "I notice that the data frame has date as the index, which is not ideal for this use case, also there is a column for per day change which is not required , thus I will reset the index and obtain a date column, also drop the daychange column"
    ]
   },
   {
@@ -335,8 +335,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking for any null values"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -344,20 +351,49 @@
      "output_type": "stream",
      "text": [
       "Empty DataFrame\n",
-      "Columns: [date, nav]\n",
+      "Columns: [date, Motilal Oswal Midcap 30 Direct Growth]\n",
       "Index: []\n",
       "Empty DataFrame\n",
-      "Columns: [date, nav]\n",
+      "Columns: [date, Quant Small Cap Fund Growth Option Direct Plan]\n",
       "Index: []\n",
       "Empty DataFrame\n",
-      "Columns: [date, nav]\n",
+      "Columns: [date, Quant Tax Plan Growth Option Direct Plan]\n",
+      "Index: []\n",
+      "Empty DataFrame\n",
+      "Columns: [date, ICICI Prudential Gilt Fund Direct Plan Growth]\n",
+      "Index: []\n",
+      "Empty DataFrame\n",
+      "Columns: [date, PGIM India Gilt Fund Growth]\n",
+      "Index: []\n",
+      "Empty DataFrame\n",
+      "Columns: [date, PGIM India Dynamic Bond Fund Direct Plan Growth Option]\n",
+      "Index: []\n",
+      "Empty DataFrame\n",
+      "Columns: [date, Kotak Equity Hybrid Fund - Direct Plan - Growth]\n",
+      "Index: []\n",
+      "Empty DataFrame\n",
+      "Columns: [date, Edelweiss Aggressive Hybrid -Direct Plan-Growth Option]\n",
+      "Index: []\n",
+      "Empty DataFrame\n",
+      "Columns: [date, Kotak Debt Hybrid Direct Growth]\n",
       "Index: []\n"
      ]
     }
    ],
    "source": [
     "for scheme_code in equity:\n",
-    "    print(equity_dfs[scheme_code][equity_dfs[scheme_code].isnull().any(axis=1)])"
+    "    print(equity_dfs[scheme_code][equity_dfs[scheme_code].isnull().any(axis=1)])\n",
+    "for scheme_code in debt:\n",
+    "    print(debt_dfs[scheme_code][debt_dfs[scheme_code].isnull().any(axis=1)])\n",
+    "for scheme_code in hybrid:\n",
+    "    print(hybrid_dfs[scheme_code][hybrid_dfs[scheme_code].isnull().any(axis=1)])        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking if enough data points are available "
    ]
   },
   {
@@ -388,6 +424,20 @@
     "    print(debt_dfs[scheme_code].shape)\n",
     "for scheme_code in hybrid:\n",
     "    print(hybrid_dfs[scheme_code].shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I notice that data for about 20 days is missing for some funds, but since it is daily data for a 5 year period, these missing values can be ignored"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking if the data types are valid"
    ]
   },
   {
@@ -439,6 +489,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I notice that the date column needs to be converted to datetime format"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 51,
    "metadata": {},
@@ -459,6 +516,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since the NAV column is named as 'nav' in all the data frames, changing it to the respective scheme names will make it easier to understand and also avoid errors when merging the data frames"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
@@ -473,6 +537,11 @@
     "for scheme_code in hybrid:\n",
     "    hybrid_dfs[scheme_code].rename(columns={\"nav\": hybrid[scheme_code]}, inplace=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
