--- a/Mutual_Fund_Analytics.ipynb
+++ b/Mutual_Fund_Analytics.ipynb
@@ -541,7 +541,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The data frames are now as per the required format"
+   ]
   },
   {
    "cell_type": "code",
@@ -605,6 +607,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Joining the data frames , which will combine NAV of all the funds into respective equity,debt and hybrid data frames"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
@@ -631,6 +640,13 @@
     "        merge_hybrid = df\n",
     "    else:\n",
     "        merge_hybrid = pd.merge(merge_hybrid, df, on=\"date\", how=\"outer\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Taking a look at merged equity df"
    ]
   },
   {
@@ -798,6 +814,15 @@
    ],
    "source": [
     "merge_equity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But since the NAV of all the funds is independent, it needs to be normalized to make it easier to compare.\n",
+    "This can be done by dividing all the NAV values with the value on the first day of the time frame, which makes the starting value as 1 for every mutual fund, I have further multiplied the value by 100 and subtracted 100 from it, making the values start from 0.\n",
+    "this means that every 1 point increase in the value now means absolute increase of 1 percent in the NAV or the investement amount."
    ]
   },
   {
