--- a/Mutual_Fund_Analytics.ipynb
+++ b/Mutual_Fund_Analytics.ipynb
@@ -848,6 +848,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rounding down the values to 2 decimal digits"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 57,
    "metadata": {},
@@ -859,6 +866,13 @@
     "    merge_debt[scheme_name] = merge_debt[scheme_name].round(2)\n",
     "for scheme_name in hybrid.values():\n",
     "    merge_hybrid[scheme_name] = merge_hybrid[scheme_name].round(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Having a look at the merged equity data frame after the transformations, notice the starting and ending values, these now depict absolute returns"
    ]
   },
   {
@@ -1029,6 +1043,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plotting the values for equity funds to check if anything is unusual in the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
@@ -1051,6 +1072,20 @@
     "plt.title(\"Equity MF comparison\")\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I can see easy relative comparison possible with the chart"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But since we have to compare the category as a whole with other MF types and the index, its better to take the mean of all equity funds to represent the category, and applying the same for other categories as well"
    ]
   },
   {
