--- a/Mutual_Fund_Analytics.ipynb
+++ b/Mutual_Fund_Analytics.ipynb
@@ -386,7 +386,7 @@
     "for scheme_code in debt:\n",
     "    print(debt_dfs[scheme_code][debt_dfs[scheme_code].isnull().any(axis=1)])\n",
     "for scheme_code in hybrid:\n",
-    "    print(hybrid_dfs[scheme_code][hybrid_dfs[scheme_code].isnull().any(axis=1)])        "
+    "    print(hybrid_dfs[scheme_code][hybrid_dfs[scheme_code].isnull().any(axis=1)])"
    ]
   },
   {
@@ -1768,7 +1768,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Merging All mutual fund and index values based on date"
+   ]
   },
   {
    "cell_type": "code",
@@ -1786,6 +1788,13 @@
     "result_df = reduce(\n",
     "    lambda left, right: pd.merge(left, right, on=[\"date\"], how=\"outer\"), merge_all_list\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "outer join will result in null values where the date has not matched, which is expected for some values , since there were some data points missing with some funds, as we saw earlier. "
    ]
   },
   {
@@ -1811,6 +1820,20 @@
    ],
    "source": [
     "result_df[result_df.isnull().any(axis=1)].count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Thus dropping the rows with any null value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This gives us the resulting data frame"
    ]
   },
   {
